--- a/web/client/app/components/efficiency/efficiency.scss
+++ b/web/client/app/components/efficiency/efficiency.scss
@@ -18,7 +18,6 @@ efficiency {
        position: inherit !important;
 }
 
-
 }
 
 .alert-box {
@@ -60,3 +59,18 @@ efficiency {
 .active {
     border: 1px solid gainsboro;
 }
+
+.alert, .alert h4 {
+    color: #8a6d3b;
+}
+.alert {
+   padding: 5px 5px 5px 10px;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.5);
+    background-color: bisque;
+    border: 1px solid burlywood;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+
+P { text-align: left; } 
