--- a/web/client/app/common/navbar/navbar.scss
+++ b/web/client/app/common/navbar/navbar.scss
@@ -45,3 +45,34 @@ $font-white: white;
 		height:100%;
 	}
 }
+
+.md-button {
+   border-radius: 0px;
+   box-sizing: border-box;
+   color: currentColor;
+   position: relative;
+   outline: none;
+   border: 0;
+   display: inline-block;
+   padding: 0 6px;
+   margin: 0px 0px;
+   line-height: 36px;
+   min-height: 36px;
+   background: transparent;
+   white-space: nowrap;
+   min-width: 60px;
+   text-align: center;
+   text-transform: uppercase;
+   font-weight: 500;
+   font-size: 10px;
+ }
+ 
+ @media (max-width: 356px) {
+   md-sidenav {
+     width: calc(100% - 56px);
+     min-width: calc(100% - 56px);
+     max-width: calc(100% - 56px); } }
+ 
+     md-toolbar {
+      min-height: 40px;
+     } 
