--- a/web/client/app/common/header/header.scss
+++ b/web/client/app/common/header/header.scss
@@ -4,9 +4,20 @@
   min-height: 130px;
 }
 
+.header-gradient	{
+background: rgba(245,233,0,1);
+background: -moz-linear-gradient(top, rgba(245,233,0,1) 0%, rgba(230,145,0,1) 52%, rgba(254,182,69,1) 100%);
+background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(245,233,0,1)), color-stop(52%, rgba(230,145,0,1)), color-stop(100%, rgba(254,182,69,1)));
+background: -webkit-linear-gradient(top, rgba(245,233,0,1) 0%, rgba(230,145,0,1) 52%, rgba(254,182,69,1) 100%);
+background: -o-linear-gradient(top, rgba(245,233,0,1) 0%, rgba(230,145,0,1) 52%, rgba(254,182,69,1) 100%);
+background: -ms-linear-gradient(top, rgba(245,233,0,1) 0%, rgba(230,145,0,1) 52%, rgba(254,182,69,1) 100%);
+background: linear-gradient(to bottom, rgba(245,233,0,1) 0%, rgba(230,145,0,1) 52%, rgba(254,182,69,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5e900', endColorstr='#feb645', GradientType=0 );
+	}
+	
 .parkerTopBar{
 	position: fixed;
-	height: 70px;
+	height: 50px;
 	.md-toolbar-tools.layout-fill.layout-align-space-between-center.layout-row{
 		padding: 0;
 	}
