--- a/web/client/app/components/efficiency/efficiency.scss
+++ b/web/client/app/components/efficiency/efficiency.scss
@@ -1,4 +1,4 @@
-efficiency {
+efficiencyFile {
 .border {
         border: 1px solid red; 
     }
@@ -18,7 +18,7 @@ efficiency {
        position: inherit !important;
 }
 
-}
+
 
 .alert-box {
     color:#555;
@@ -74,3 +74,5 @@ efficiency {
 }
 
 P { text-align: left; } 
+
+}
