--- a/web/client/app/components/efficiency/efficiency.html
+++ b/web/client/app/components/efficiency/efficiency.html
@@ -1,110 +1,79 @@
 <md-card>
-  <md-card-content>
-        <div layout-xs="coloumn" layout-sm="row" layout-md="row" layout-gt-md="row" >  
-            <div flex-xs="100" flex="50" style="border: 1px solid gainsboro;">
-            <md-toolbar class="_md _md-toolbar-transitions" style="position: inherit;background-color: rgb(27,32,45);min-height:40px;">
-                    <div class="md-toolbar-tools">
-                    <h2>Fuel Guage</h2>
-                    </div>
-                </md-toolbar>
-                 <fuel-chart layout-fill data="vm.gaugeData"></fuel-chart>
-                 <center>
-                 <div  flex="100" style="padding-bottom: 8px;">
-                 <h4>Distance to Empty</h4>
-                 <bar-chart layout-fill data="vm.gaugeData"></bar-chart>
-                 </div>
-                 </center>
-                 
+   <md-card-content>
+      <div layout-xs="coloumn"  flex="100" lex-xs="100"  layout-sm="row" layout-md="row" layout-gt-md="row" >
+         <div class="panel panel-primary"  flex-xs="100" flex="50">
+            <div class="panel-heading">
+               <h3 class="panel-title">Live Data</h3>
             </div>
-            <div flex-xs="100" flex="50" style="border: 1px solid gainsboro;">
-                <md-toolbar class="_md _md-toolbar-transitions" style="position: inherit;background-color: rgb(27,32,45);min-height:40px;">
-                    <div class="md-toolbar-tools">
-                    <h2>Last Trip</h2>
-                    </div>
-                </md-toolbar>
-
-            <center>
-                <div class="alert alert-info" style="margin-top:5px;" flex="95">
-                    <p>Engine Hours :<b>9:30</b></p>
-                </div>
-                 <div class="alert alert-info" style="margin-top:5px;" flex="95">
-                    <p>Miles Driven <b>12</b> </p>
-                </div>
-                 <div class="alert alert-info" style="margin-top:5px;" flex="95">
-                    <p>Fault Code <b>1</b> </p>                    
-                </div>
-                 <div class="alert alert-info" style="margin-top:5px;" flex="95">
-                    <p>Total Gas used  <b>34 Gallons</b> </p>                    
-                </div>
-            </center>
-
-
-                </div>
-        </div>        
-        <div flex="100" lex-xs="100" style="border: 1px solid gainsboro;">
-                <md-toolbar class="_md _md-toolbar-transitions" style="position: inherit;background-color: rgb(27,32,45);min-height: 40px;">
-                    <div class="md-toolbar-tools">
-                    <h2>Miles/Gallon</h2>
-                    </div>
-                </md-toolbar>
-                <div  layout-xs="coloumn" layout-sm="row" layout-md="row" layout-gt-md="row" style="padding-right: 5px;">
-                    <div flex="100" flex-xs="100">
-                        <section layout="row" layout-align="end end">
-                            <md-button ng-class="{active: vm.paramsMG == 'MGlasWeek' }" ng-click="vm.filtersValue('MGlasWeek')"  class="groupX left">Last Week</md-button>
-                            <md-button ng-class="{active: vm.paramsMG == 'MGcurWeek' }" ng-click="vm.filtersValue('MGcurWeek')" class="groupX middle">Current Week</md-button>
-                            <md-button ng-class="{active: vm.paramsMG == 'MGmonthly' }" ng-click="vm.filtersValue('MGmonthly')" class="groupX right">Monthly</md-button>
-                        </section>
-                    </div>
-                </div>
-                <span layout-xs="coloumn" layout-sm="row" layout-md="row" layout-gt-md="row" style="float: right;">
-                    <md-select style="margin:0px;" ng-model="vm.barChartFiltersValue" ng-change="">
-                      <md-option ng-repeat="filtersValue in vm.barChartFilters" value="{{vm.barChartFiltersValue}}">
-                      {{filtersValue.value}}
-                      </md-option>
-                    </md-select>
-                </span>
-                <barline-chart layout-fill data="vm.milesGallonsData" title="barChart"></barline-chart>
+            <div class="panel-body">
+               <fuel-chart layout-fill data="vm.gaugeData"></fuel-chart>
+               <h3 class="panel-title">Distance to Empty</h3>
+               <bar-chart layout-fill data="vm.gaugeData"></bar-chart>
             </div>
-             <div flex="100" style="margin-top: 5px;border: 1px solid gainsboro;">
-                    <md-toolbar class="_md _md-toolbar-transitions" style="position: inherit;background-color: rgb(27,32,45);min-height: 50px;">
-                        <div class="md-toolbar-tools">
-                            <h2>Site View</h2>
-                        </div>
-                    </md-toolbar>
-                    <br>
-
-                    <div layout="column" style="float:right;">
-                        <md-select placeholder="Vehicle Id" ng-model="vm.vehicle" ng-change="vm.onVehicleChange()">
-                            <md-option ng-repeat="vehicle in vm.vehicleList" value="{{vehicle}}">
-                                {{vehicle}}
-                            </md-option>
-                        </md-select>
-                    </div>
-                    &nbsp;&nbsp;&nbsp;
-                    <div layout="column" style="float:right;">
-                        <md-select placeholder="DGE" ng-model="vm.dge" ng-change="vm.onDgeChange()">
-                            <md-option ng-repeat="dge in vm.dgeList" value="{{dge}}">
-                                {{dge}}
-                            </md-option>
-                        </md-select>
-                    </div>
-                    &nbsp;&nbsp;&nbsp;
-                    <div layout="column" style="float:right;">
-                        <md-select placeholder="Last Week" ng-model="vm.time" ng-change="vm.onTimeChange()">
-                            <md-option ng-repeat="time in vm.timeList" value="{{time}}">
-                                {{time}}
-                            </md-option>
-                        </md-select>
-                    </div>
-                    &nbsp;&nbsp;&nbsp;
-                    </span>
-                    <br>
-                    <basic-line-chart data="vm.lineChartData"></basic-line-chart>
-                </div>
-  </md-card-content>
+         </div>
+         <div class="panel panel-primary"  flex-xs="100" flex="50" style="margin-left: 5px;">
+            <div class="panel-heading">
+               <h3 class="panel-title">Last Trip</h3>
+            </div>
+            <div class="panel-body">
+               <center>
+                  <div class="alert alert-info" style="margin-top:5px;" flex="95">
+                     <p>Engine Hours :<b>9:30</b></p>
+                  </div>
+                  <div class="alert alert-info" style="margin-top:5px;" flex="95">
+                     <p>Miles Driven <b>12</b> </p>
+                  </div>
+                  <div class="alert alert-info" style="margin-top:5px;" flex="95">
+                     <p>Fault Code <b>1</b> </p>
+                  </div>
+                  <div class="alert alert-info" style="margin-top:5px;" flex="95">
+                     <p>Total Gas used  <b>34 Gallons</b> </p>
+                  </div>
+               </center>
+            </div>
+         </div>
+      </div>
+      <div class="panel panel-primary"  flex-xs="100" flex="100">
+         <div class="panel-heading">
+            <h3 class="panel-title">Miles/Gallon</h3>
+         </div>
+         <div class="panel-body">
+            <barline-chart layout-fill data="vm.milesGallonsData" title="barChart"></barline-chart>
+         </div>
+      </div>
+      <div class="panel panel-primary"  flex-xs="100" flex="100">
+         <div class="panel-heading">
+            <h3 class="panel-title">Site View</h3>
+         </div>
+         <div class="panel-body">
+            <div layout="column" style="float:right;">
+               <md-select placeholder="Vehicle Id" ng-model="vm.vehicle" ng-change="vm.onVehicleChange()">
+                  <md-option ng-repeat="vehicle in vm.vehicleList" value="{{vehicle}}">
+                     {{vehicle}}
+                  </md-option>
+               </md-select>
+            </div>
+            &nbsp;&nbsp;&nbsp;
+            <div layout="column" style="float:right;">
+               <md-select placeholder="DGE" ng-model="vm.dge" ng-change="vm.onDgeChange()">
+                  <md-option ng-repeat="dge in vm.dgeList" value="{{dge}}">
+                     {{dge}}
+                  </md-option>
+               </md-select>
+            </div>
+            &nbsp;&nbsp;&nbsp;
+            <div layout="column" style="float:right;">
+               <md-select placeholder="Last Week" ng-model="vm.time" ng-change="vm.onTimeChange()">
+                  <md-option ng-repeat="time in vm.timeList" value="{{time}}">
+                     {{time}}
+                  </md-option>
+               </md-select>
+            </div>
+            &nbsp;&nbsp;&nbsp;
+            </span>
+            <br>
+            <basic-line-chart data="vm.lineChartData"></basic-line-chart>
+         </div>
+      </div>
+   </md-card-content>
 </md-card>
-
-
-
-
-    
