--- a/web/client/app/components/fuel/fuel.html
+++ b/web/client/app/components/fuel/fuel.html
@@ -11,223 +11,123 @@
     </div>        
     <br>
  </div>
- <md-card id="fuelContainer">
-  <md-card-content>
-    <div  layout-align="end start" layout-xs="colomn" layout-sm="row" layout-md="row" layout-gt-md="row" flex="70">
-    </div>
-    <div class="text-center" flex-xs="100" flex="100" layout-xs="colomn" layout-sm="row"  style="border: 1px solid gainsboro;">
-        <ul class="stats_box"  flex-xs="100" flex="100" style="margin-bottom: 0px;">
-        <li>
-            <div class="sparkline bar_week">
-                <md-icon style="font-size: 45px;" md-font-icon="icon-trends"></md-icon>
-            </div>
-            <div class="stat_text">
-            Total<strong>Truck Alerts</strong>
-            <span class="percent down"> <i class="fa fa-caret-down"></i>6</span> 
-            </div>
-        </li>
-        <li>
-            <div class="sparkline line_day">
-            <md-icon style="font-size: 45px;" md-font-icon="icon-information"></md-icon>
-                </div>
-            <div class="stat_text">
-                AVG<strong>DGE/Hr</strong>
-            <span class="percent up"> <i class="fa fa-caret-up"></i> +23%</span> 
-            </div>
-        </li>
-        <li>
-            <div class="sparkline pie_week">
-            <md-icon style="font-size: 45px;" md-font-icon="icon-user-filled"></md-icon>
-            </div>
-            <div class="stat_text">
-            Good Performance<strong style="color: green;"><i class="fa fa-caret-down"></i>VM-3322</strong>
-            </div>
-        </li>
-        <li>
-            <div class="sparkline pie_week">
-            <md-icon style="font-size: 45px;" md-font-icon="icon-user-filled"></md-icon>
-            </div>
-            <div class="stat_text">
-            Low Performance<strong style="color: #c52f61;">VM-3322</strong>
-            </div>
-        </li>
-        </ul>
-    </div>
 
-    
-    <!--<div style="margin-top: 5px;" layout-xs="coloumn" layout-sm="row" layout-md="row" layout-gt-md="row">
-
-            <div flex-xs="100" flex="50" style="border: 1px solid gainsboro;">
-                <md-toolbar class="_md _md-toolbar-transitions" style="position: inherit;background-color: rgb(27,32,45);min-height: 50px;">
-                    <div class="md-toolbar-tools">
-                    <h2>Fuel Details</h2>
-                    </div>
-                </md-toolbar>
-                <fuel-chart data="vm.gaugeData" title="fuelchart"></fuel-chart>
+<md-card id="fuelContainer">
+   <md-card-content>
+      <div  layout-align="end start" layout-xs="colomn" layout-sm="row" layout-md="row" layout-gt-md="row" flex="70">
+      </div>
+      <div class="text-center" flex-xs="98" flex="98" layout-xs="colomn" layout-sm="row">
+         <ul class="stats_box"  flex-xs="98" flex="98" style="margin-bottom: 0px;">
+            <li>
+               <div class="sparkline bar_week">
+                  <md-icon style="font-size: 45px;" md-font-icon="icon-trends"></md-icon>
+               </div>
+               <div class="stat_text">
+                  Total<strong>Truck Alerts</strong>
+                  <span class="percent down"> <i class="fa fa-caret-down"></i>6</span> 
+               </div>
+            </li>
+            <li>
+               <div class="sparkline line_day">
+                  <md-icon style="font-size: 45px;" md-font-icon="icon-information"></md-icon>
+               </div>
+               <div class="stat_text">
+                  AVG<strong>DGE/Hr</strong>
+                  <span class="percent up"> <i class="fa fa-caret-up"></i> +23%</span> 
+               </div>
+            </li>
+            <li>
+               <div class="sparkline pie_week">
+                  <md-icon style="font-size: 45px;" md-font-icon="icon-user-filled"></md-icon>
+               </div>
+               <div class="stat_text">
+                  Good Performance<strong style="color: green;"><i class="fa fa-caret-down"></i>VM-3322</strong>
+               </div>
+            </li>
+            <li>
+               <div class="sparkline pie_week">
+                  <md-icon style="font-size: 45px;" md-font-icon="icon-user-filled"></md-icon>
+               </div>
+               <div class="stat_text">
+                  Low Performance<strong style="color: #c52f61;">VM-3322</strong>
+               </div>
+            </li>
+         </ul>
+      </div>
+      <div layout-xs="coloumn" layout-sm="row" layout-md="row" layout-gt-md="row"  flex-xs="100" flex="100" >
+         <div class="panel panel-primary"  flex-xs="100" flex="50">
+            <div class="panel-heading">
+               <h3 class="panel-title">DGE Filled/Day</h3>
             </div>
-            <div flex-xs="100" flex="50" style="margin-left:2px;border: 1px solid gainsboro;">
-            <md-toolbar class="_md _md-toolbar-transitions" style="position: inherit;background-color: rgb(27,32,45);min-height: 50px;">
-                <div class="md-toolbar-tools">
-                <h2>Distance to Empty</h2>
-                </div>
-            </md-toolbar>
-
-                <div class="distance-display">
-                    
-
-                </div>     
-
-               <p class="md-subhead" style="padding-top: 130px;text-align:center;">
-                    <span class="distancetoEmpty" style="padding-left: 41px;">Distance to Empty: <b> {{ vm.color }}</b> </span>
-                     <br> 
-                     <span style="padding-left: 65px;" class="gasfill">Fill Gas On: <b> <span class="datavale">16 Sep 2016 <span> </b></span>
-                      </p>
-               <md-slider-container class="slider-container" style="margin-left: 10%;width:80%;">
-                    <md-slider ng-disabled="true" flex min="{{vm.minvalue}}"  max="{{vm.maxvalue}}" ng-model="vm.color" aria-label="red" id="red-slider">
-                 </md-slider>
-                </md-slider-container>
+            <div class="panel-body">
+               <barline-chart layout-fill data="vm.milesGallonsData" title="barChart"></barline-chart>
             </div>
-     </div>-->
-
-     
-    <!--<div flex-xs="100"  flex="100" style="margin-top: 5px;border: 1px solid gainsboro;">
-        <md-toolbar class="_md _md-toolbar-transitions" style="position: inherit;background-color: rgb(27,32,45);min-height: 40px;">
-            <div style="min-height: 40px;" class="md-toolbar-tools">Gallons Filled/Day</div>
-            </md-toolbar>
-            <div  layout-xs="coloumn" layout-sm="row" layout-md="row" layout-gt-md="row" style="padding-right: 5px;">
-            <div flex="100" flex-xs="100">
-
-                <div  layout-xs="coloumn" layout-sm="row" layout-md="row" layout-gt-md="row" style="padding-right: 5px;">
-                    <div flex="100" flex-xs="100">
-                    <section layout="row" layout-align="end end">
-                        <md-button  ng-class="{active: vm.paramsGU == 'GUlasWeek' }" ng-click="vm.filtersValue('lasWeek')" class="groupX left">Last Week</md-button>
-                        <md-button ng-class="{active: vm.paramsGU == 'GUcurWeek' }"  ng-click="vm.filtersValue('preWeek')" class="groupX middle">Present Week</md-button>
-                        <md-button ng-class="{active: vm.paramsGU == 'GUmonthly' }" ng-click="vm.filtersValue('monthly')" class="groupX right">Monthly</md-button>
-                    </section>
-                    </div>
-                </div>-->
-
-                <!--<section layout="row" layout-align="end end">
-                    <md-button ng-click="vm.filtersValue('lasWeek')" class="groupX left">Last Week</md-button>
-                    <md-button ng-click="vm.filtersValue('preWeek')" class="groupX middle">Present Week</md-button>
-                    <md-button ng-click="vm.filtersValue('monthly')" class="groupX right">Monthly</md-button>
-                </section>-->
-            <!--</div>
+         </div>
+         <div class="panel panel-primary" flex-xs="100" flex="50" style="margin-left: 5px;">
+            <div class="panel-heading">
+               <h3 class="panel-title">DGE Used/Day</h3>
             </div>
-            
-            <bar-chart layout-fill ng-if="vm.renderAgain" data="vm.barData" title="barChart"></bar-chart>
-    </div>-->
-    <!--<div flex-xs="100"  flex="100" style="margin-top: 5px;border: 1px solid gainsboro;">
-        <md-toolbar class="_md _md-toolbar-transitions" style="position: inherit;background-color: rgb(27,32,45);min-height: 40px;">
-            <div style="min-height: 40px;" class="md-toolbar-tools">Gallons Used/Day</div>
-            </md-toolbar>
-            <div  layout-xs="coloumn" layout-sm="row" layout-md="row" layout-gt-md="row" style="padding-right: 5px;">
-            <div flex="100" flex-xs="100">
-                <section layout="row" layout-align="end end">
-                    <md-button ng-click="vm.filtersValue('lasWeek')" class="groupX left">Last Week</md-button>
-                    <md-button ng-click="vm.filtersValue('preWeek')" class="groupX middle">Present Week</md-button>
-                    <md-button ng-click="vm.filtersValue('monthly')" class="groupX right">Monthly</md-button>
-                </section>
+            <div class="panel-body">
+               <barline-chart layout-fill data="vm.milesGallonsData" title="barChart"></barline-chart>
             </div>
+         </div>
+      </div>
+      <div layout-xs="coloumn" layout-sm="row" layout-md="row" layout-gt-md="row"  flex-xs="100" flex="100" >
+         <div class="panel panel-primary"  flex-xs="100" flex="100">
+            <div class="panel-heading">
+               <h3 class="panel-title">Vehicle Detail</h3>
             </div>
-            <bar-chart layout-fill ng-if="vm.renderAgain" data="vm.barData" title="barChart"></bar-chart>
-    </div>-->
-
-
-    <div style="margin-top: 5px;" layout-xs="coloumn" layout-sm="row" layout-md="row" layout-gt-md="row">
-            <div flex-xs="100" flex="50" style="border: 1px solid gainsboro;">
-                <md-toolbar class="_md _md-toolbar-transitions" style="position: inherit;background-color: rgb(27,32,45);min-height: 40px;">
-            <div style="min-height: 40px;" class="md-toolbar-tools">DGE Filled/Day</div>
-            </md-toolbar>
-                <div  layout-xs="coloumn" layout-sm="row" layout-md="row" layout-gt-md="row" style="padding-right: 5px;">
-                    <div flex="100" flex-xs="100">
-                    <section layout="row" layout-align="end end" style="margin-top: 5px;margin-bottom: 5px;">
-                        <!--
-                        <md-button  ng-class="{active: vm.paramsGU == 'GUlasWeek' }" ng-click="vm.filtersValue('lasWeek')" class="groupX left">Last Week</md-button>
-                        <md-button ng-class="{active: vm.paramsGU == 'GUcurWeek' }"  ng-click="vm.filtersValue('preWeek')" class="groupX middle">Present Week</md-button>
-                        <md-button ng-class="{active: vm.paramsGU == 'GUmonthly' }" ng-click="vm.filtersValue('monthly')" class="groupX right">Monthly</md-button>-->
-                    </section>
-                    </div>
-                </div>
-
-                <barline-chart layout-fill data="vm.milesGallonsData" title="barChart"></barline-chart>
-                 <!--<bar-chart layout-fill ng-if="vm.renderAgain" data="vm.barData" title="barChart"></bar-chart>-->
+            <div class="panel-body">
+               <md-input-container class="md-icon-float" style="height: 34px;width:100%;">
+                  <label>Global Search</label>
+                  <md-icon style="font-size: 28px;margin: -2px;" md-font-icon="icon-search"></md-icon>
+                  <input style="padding-left: 33px;" ng-model="searchFish" id="sInput" ng-change="filterCartoList(searchInput)" my-enter="filterCartoList(searchInput)" />
+               </md-input-container>
+               <table class="table table-bordered table-striped">
+                  <thead>
+                     <tr>
+                        <td>
+                           <a  ng-click="vm.sortType = 'name'; vm.sortReverse = !vm.sortReverse">
+                           VID 
+                           <a>
+                              <md-icon style="font-size: 25px;" title="Click to check" md-font-icon="icon-down"></md-icon>
+                           </a>
+                           <span ng-show="vm.sortType == 'name' && !vm.sortReverse" class="fa fa-caret-down"></span>
+                           <span ng-show="vm.sortType == 'name' && vm.sortReverse" class="fa fa-caret-up"></span>
+                           </a>
+                        </td>
+                        <td>
+                           <a  ng-click="vm.sortType = 'fish'; sortReverse = !vm.sortReverse">
+                           Status
+                           <span ng-show="vm.sortType == 'fish' && !vm.sortReverse" class="fa fa-caret-down"></span>
+                           <span ng-show="vm.sortType == 'fish' && vm.sortReverse" class="fa fa-caret-up"></span>
+                           </a>
+                        </td>
+                        <td>
+                           <a ng-click="vm.sortType = 'tastiness'; vm.sortReverse = !vm.sortReverse">
+                           Location
+                           <span ng-show="sortType == 'tastiness' && !sortReverse" class="fa fa-caret-down"></span>
+                           <span ng-show="sortType == 'tastiness' && sortReverse" class="fa fa-caret-up"></span>
+                           </a>
+                        </td>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr ng-repeat="roll in vm.sushi | orderBy:vm.sortType:vm.sortReverse | filter:searchFish">
+                        <td><a ui-sref="efficiency({vechicle_id: 'M-675'})">{{ roll.name }}</a></td>
+                        <td>{{ roll.fish }}</td>
+                        <td>
+                           {{ roll.tastiness }}  
+                           <md-icon style="font-size: 35px;" title="Click to check" md-font-icon="icon-location"></md-icon>
+                        </td>
+                     </tr>
+                  </tbody>
+               </table>
+               <center>
+                  <div ng-if="(vm.sushi | filter:searchFish).length == 0">No Vehicle to Display</div>
+               </center>
             </div>
-            <div flex-xs="100" flex="50" style="margin-left:2px;border: 1px solid gainsboro;">
-                    <md-toolbar class="_md _md-toolbar-transitions" style="position: inherit;background-color: rgb(27,32,45);min-height: 40px;">
-            <div style="min-height: 40px;" class="md-toolbar-tools">DGE Used/Day</div>
-            </md-toolbar>
-                    <!--<section layout="row" layout-align="end end">
-                        <md-button  ng-class="{active: vm.paramsGU == 'GUlasWeek' }" ng-click="vm.filtersValue('lasWeek')" class="groupX left">Last Week</md-button>
-                        <md-button ng-class="{active: vm.paramsGU == 'GUcurWeek' }"  ng-click="vm.filtersValue('preWeek')" class="groupX middle">Present Week</md-button>
-                        <md-button ng-class="{active: vm.paramsGU == 'GUmonthly' }" ng-click="vm.filtersValue('monthly')" class="groupX right">Monthly</md-button>
-                    </section>-->
-                    <!--<bar-chart layout-fill ng-if="vm.renderAgain" data="vm.barData" title="barChart"></bar-chart>-->
-                     <barline-chart layout-fill data="vm.milesGallonsData" title="barChart"></barline-chart>
-            </div>
-     </div>
-
-    <div style="margin-top: 5px;" layout-xs="coloumn" layout-sm="row" layout-md="row" layout-gt-md="row">
-            <div flex-xs="100" flex="100" style="border: 1px solid gainsboro;">
-                <md-toolbar class="_md _md-toolbar-transitions" style="position: inherit;background-color: rgb(27,32,45);min-height: 40px;">
-                    <div style="min-height: 40px;" class="md-toolbar-tools">
-                    <h2>Vehicle Details</h2>
-                    </div>
-                </md-toolbar>
-                <md-input-container class="md-icon-float" style="height: 34px;margin-top:17px;width:100%;">
-                    <label>Global Search</label>
-                 <md-icon style="font-size: 28px;margin: -2px;" md-font-icon="icon-search"></md-icon>
-                <input style="padding-left: 33px;" ng-model="searchFish" id="sInput" ng-change="filterCartoList(searchInput)" my-enter="filterCartoList(searchInput)" />
-                 </md-input-container>
-
-                <table class="table table-bordered table-striped">
-                <thead>
-                    <tr>
-                    <td>
-                        <a  ng-click="vm.sortType = 'name'; vm.sortReverse = !vm.sortReverse">
-                        VID <a><md-icon style="font-size: 25px;" title="Click to check" md-font-icon="icon-down"></md-icon></a> 
-                        <span ng-show="vm.sortType == 'name' && !vm.sortReverse" class="fa fa-caret-down"></span>
-                        <span ng-show="vm.sortType == 'name' && vm.sortReverse" class="fa fa-caret-up"></span>
-                        </a>
-                    </td>
-                    <td>
-                        <a  ng-click="vm.sortType = 'fish'; sortReverse = !vm.sortReverse">
-                       Status
-                        <span ng-show="vm.sortType == 'fish' && !vm.sortReverse" class="fa fa-caret-down"></span>
-                        <span ng-show="vm.sortType == 'fish' && vm.sortReverse" class="fa fa-caret-up"></span>
-                        </a>
-                    </td>
-                    <td>
-                        <a ng-click="vm.sortType = 'tastiness'; vm.sortReverse = !vm.sortReverse">
-                        Location
-                        <span ng-show="sortType == 'tastiness' && !sortReverse" class="fa fa-caret-down"></span>
-                        <span ng-show="sortType == 'tastiness' && sortReverse" class="fa fa-caret-up"></span>
-                        </a>
-                    </td>
-                    
-                    </tr>
-                </thead>
-                <tbody>
-
-                    <tr ng-repeat="roll in vm.sushi | orderBy:vm.sortType:vm.sortReverse | filter:searchFish">
-                    <td><a ui-sref="efficiency({vechicle_id: 'M-675'})">{{ roll.name }}</a></td>
-                    <td>{{ roll.fish }}</td>
-                    <td>{{ roll.tastiness }}  <md-icon style="font-size: 35px;" title="Click to check" md-font-icon="icon-location"></md-icon>  </td>
-                    </tr>
-                </tbody>
-                </table>
-                <center>
-                      <div ng-if="(vm.sushi | filter:searchFish).length == 0">No Vehicle to Display</div>
-                </center>    
-                </div>
-            <!--<div flex-xs="100" flex="50" style="margin-left:2px;border: 1px solid gainsboro;">
-            <md-toolbar class="_md _md-toolbar-transitions" style="position: inherit;background-color: rgb(27,32,45);min-height: 40px;">
-                <div style="min-height: 40px;" class="md-toolbar-tools">
-                <h2>Map</h2>
-                </div>
-            </md-toolbar>
-                <div>
-                      <img style="width: 100%;" src="{{vm.headerUrl}}">
-                    </div>
-            </div>-->
-     </div>
+         </div>
+      </div>
+   </md-card-content>
+</md-card>
