--- a/web/client/app/components/efficiency/efficiency.html
+++ b/web/client/app/components/efficiency/efficiency.html
@@ -35,7 +35,7 @@
       </div>
       <div class="panel panel-primary"  flex-xs="100" flex="100">
          <div class="panel-heading">
-            <h3 class="panel-title">Miles/Gallon</h3>
+            <h3 class="panel-title">Gas Filled/Day</h3>
          </div>
          <div class="panel-body">
             <barline-chart layout-fill data="vm.milesGallonsData" title="barChart"></barline-chart>
